--- a/ui/PyTrace.ui
+++ b/ui/PyTrace.ui
@@ -28,6 +28,13 @@
      <number>0</number>
     </property>
     <item>
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QGraphicsView" name="GraphicsView"/>
     </item>
    </layout>
@@ -38,7 +45,7 @@
      <x>0</x>
      <y>0</y>
      <width>1073</width>
-     <height>19</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
